<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayef"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/include_toptitle"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifity" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five"
        android:background="@drawable/bg_color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/tel_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_personal_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv5"
                android:text="账号"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />


            <TextView
                android:id="@+id/code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:textColor="@color/blacksix"
                android:textSize="@dimen/text_fourteen" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:background="@color/grayef" />

        <RelativeLayout
            android:id="@+id/name_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_add_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv6"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />

            <ImageView
                android:id="@+id/i1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:src="@mipmap/icon_sanjiao_right" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:layout_toLeftOf="@id/i1"
                android:textColor="@color/blacksix"
                android:textSize="@dimen/text_fourteen" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:background="@color/grayef" />

        <RelativeLayout
            android:id="@+id/mobile_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_add_mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv7"
                android:text="@string/moble"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />

            <ImageView
                android:id="@+id/i2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:src="@mipmap/icon_sanjiao_right" />

            <TextView
                android:id="@+id/mobile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:layout_toLeftOf="@id/i2"
                android:textColor="@color/blacksix"
                android:textSize="@dimen/text_fourteen" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:background="@color/grayef" />

        <RelativeLayout
            android:id="@+id/update_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_add_pwd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv8"
                android:text="@string/updatepwd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:src="@mipmap/icon_sanjiao_right" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/five"
        android:layout_marginRight="@dimen/five"
        android:background="@drawable/bg_color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/add_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_personal_store" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv2"
                android:text="所属门店"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />

            <TextView
                android:id="@+id/store_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:textColor="@color/blacksix"
                android:textSize="@dimen/text_fourteen" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:background="@color/grayef" />

        <RelativeLayout
            android:id="@+id/role_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/bg_color_white">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/ten"
                android:src="@mipmap/icon_personal_tit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_toRightOf="@id/iv3"
                android:text="身份"
                android:textColor="@color/black"
                android:textSize="@dimen/text_fourteen" />

            <TextView
                android:id="@+id/tit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/ten"
                android:textColor="@color/blacksix"
                android:textSize="@dimen/text_fourteen" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>